# python-runtime-mod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mod.json
.github/workflows/: build.yml
include/: PythonRuntime.hpp
logs/: 1_Android32.txt  1_Android64.txt  2_Android64.txt  2_Windows.txt  3_macOS.txt  4_Android32.txt  4_iOS.txt  5_Windows.txt  5_iOS.txt
logs/Android32/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build the mod.txt  5_Post Build the mod.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs/Android64/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build the mod.txt  5_Post Build the mod.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs/Package builds/: system.txt
logs/Windows/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build the mod.txt  5_Post Build the mod.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs/iOS/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build the mod.txt  5_Post Build the mod.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs/macOS/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build the mod.txt  5_Post Build the mod.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
src/: main.cpp
